--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -233,6 +233,17 @@ hr {
     text-align: center !important;
 }
 
+a.disabled {
+    pointer-events: none;
+    cursor: default;
+}
+
+    a.disabled:hover,
+    a.disabled:active {
+        color: var(--color-primary-dark);
+    }
+    
+
 
 
 
