--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -266,7 +266,7 @@ span.badge:not(:empty)::after {
 
 @media (max-width: 600px) {
 
-    .nav-crumbs a {
+    .nav-crumbs ul li a {
         font-size: 0.85rem;
         padding: 0rem 0.85rem;
     }
