--- a/chipman.abigail/css/abdztheme.css
+++ b/chipman.abigail/css/abdztheme.css
@@ -112,6 +112,10 @@ a:hover {
 }
 
 @media (max-width: 425px) {
+  .navbar {
+    line-height: 2rem;
+  }
+
   .navbar .display-flex {
     flex-wrap: wrap;
   }
@@ -130,7 +134,8 @@ a:hover {
   }
   .navbar .nav li {
     line-height: 1em;
-    padding: 0.25em;
+    padding: 0.5em;
+    font-size: 2em;
   }
 
   .menu-button label {
@@ -143,7 +148,7 @@ a:hover {
   }
 
   .image-main img {
-    width: 5em;
+    width: 10px;
     height: 70vh;
     object-fit: contain;
   }
@@ -170,7 +175,7 @@ a:hover {
   }
 
   .nav-logo {
-    height: 3em;
+    height: 5em;
     width: auto;
   }
 
@@ -205,7 +210,7 @@ a:hover {
     text-decoration: none;
   }
   .card.section h2 {
-    font-size: 1em;
+    font-size: 2em;
     font-weight: bold;
     text-align: right;
     padding-right: 0.25em;
@@ -213,8 +218,16 @@ a:hover {
 }
 
 @media (max-width: 375px) {
+  .navbar {
+    line-height: 2rem;
+  }
+
   .navbar .display-flex {
     flex-wrap: wrap;
+  }
+
+  header {
+    line-height: 3rem;
   }
 
   .navbar .nav {
@@ -227,12 +240,13 @@ a:hover {
   }
   .navbar .nav li {
     line-height: 1em;
-    padding: 0.25em;
+    padding: 0.5em;
+    font-size: 2em;
   }
 
   .menu-button label {
     display: block;
-    font-size: 4em;
+    font-size: 5em;
   }
 
   #menu:checked + .navbar .nav {
@@ -241,13 +255,13 @@ a:hover {
 
   .image-main img {
     width: 100%;
-    height: 70vh;
+    height: 30vh;
     object-fit: contain;
   }
 
   .image-thumb img {
     width: auto;
-    height: 3em;
+    height: 2em;
     object-fit: contain;
   }
 
@@ -267,7 +281,7 @@ a:hover {
   }
 
   .nav-logo {
-    height: 3em;
+    height: 5em;
     width: auto;
   }
 
@@ -302,7 +316,7 @@ a:hover {
     text-decoration: none;
   }
   .card.section h2 {
-    font-size: 1em;
+    font-size: 2em;
     font-weight: bold;
     text-align: right;
     padding-right: 0.25em;
