--- a/song.summer/css/style.css
+++ b/song.summer/css/style.css
@@ -85,7 +85,7 @@ li:hover {
 
 .flex-column {flex-direction: column;}
 
-.flex-wram {flex-wrap:wrap; }
+.flex-wrap {flex-wrap:wrap; }
 
 /* COMPONENT CLASSES */
 
@@ -222,7 +222,7 @@ figcaption {
 
 .menu-button label { display:none; }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
     .navbar .display-flex {
       flex-wrap: wrap;
     }
